--- a/PROYECTO/public/css/main.css
+++ b/PROYECTO/public/css/main.css
@@ -70,6 +70,35 @@
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
 }
 
+.btn-cta__tercero {
+  width: 230px;
+  height: 60px;
+  justify-content: space-around;
+  background-color: #00304E;
+  color: white;
+  border-radius: 50px;
+  padding: 20px 30px;
+  margin: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-weight: bolder;
+}
+.btn-cta__tercero:hover {
+  background-color: #55B4B0;
+  color: white;
+  border-radius: 50px;
+  padding: 20px 30px;
+  margin: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-weight: bolder;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -162,6 +191,17 @@ h4 {
 }
 
 .container__admin {
+  background-color: white;
+  margin: 40px auto;
+  width: 1100px;
+  height: 550px;
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  background-image: url("../../img/SECUNDARIO.png");
+  background-size: 100% 100%;
+}
+
+.container__registro {
   background-color: white;
   margin: 40px auto;
   width: 1100px;
@@ -342,6 +382,10 @@ header nav {
   justify-content: right;
 }
 
+.centro {
+  justify-content: center;
+}
+
 .margen {
   margin: 0px 30px;
 }
@@ -369,6 +413,30 @@ header nav {
   border-radius: 2rem;
   padding: 1.5rem;
   width: 32rem;
+}
+
+/*solicitudes*/
+.solicitudes {
+  display: grid;
+  grid-template-rows: repeat(1, 1fr);
+  gap: 2rem;
+  margin: 10px 80px;
+}
+
+.solicitud {
+  align-content: center;
+  background-color: #55B4B0;
+  border-radius: 2rem;
+  padding: 1.5rem;
+  width: 65rem;
+}
+
+.reportes {
+  align-content: center;
+  background-color: #55B4B0;
+  border-radius: 2rem;
+  padding: 1.5rem;
+  width: 29rem;
 }
 
 .bloque__titulo {
