--- a/PROYECTO/public/css/main.scss
+++ b/PROYECTO/public/css/main.scss
@@ -65,6 +65,18 @@ $unit: 8px;
     }
 }
 
+
+.btn-cta__tercero{
+    width: 230px;
+    height: 60px;
+    justify-content: space-around;
+    @include btn($navy-color, $terciary-color, 'true');
+    &:hover{
+        @include btn($turqueza, $terciary-color, 'true');
+        box-shadow: $box-shadow; 
+    }
+}
+
 *{
     @include reset-pm();
     box-sizing: border-box;
@@ -161,6 +173,18 @@ h4{
 }
 
 .container__admin{
+    background-color: white;
+    margin: 40px auto;
+    width: 1100px;
+    height: 550px;
+    box-shadow: 0 0 20px 2px rgb(0, 0, 0, 0.1);
+    border-radius: 30px;
+
+    background-image: url("../../img/SECUNDARIO.png");
+    background-size: 100% 100%;
+}
+
+.container__registro{
     background-color: white;
     margin: 40px auto;
     width: 1100px;
@@ -331,6 +355,10 @@ header{
     justify-content: right;
 }
 
+.centro{
+    justify-content: center;
+}
+
 .margen{
     margin: 0px 30px;
 }
@@ -342,6 +370,9 @@ header{
 .nosotros__contenido{
     margin: 60px 70px;
 }
+
+
+
     /* Bloques */
 .bloques{
     display: grid;
@@ -356,6 +387,33 @@ header{
     padding: 1.5rem;
     width: 32rem;
 }
+
+
+/*solicitudes*/
+.solicitudes{
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    gap: 2rem; 
+    margin: 10px 80px;
+}
+
+.solicitud{
+    align-content: center;
+    background-color: $turqueza;
+    border-radius: 2rem;
+    padding: 1.5rem;
+    width: 65rem;
+}
+
+//REPORTES
+.reportes{
+    align-content: center;
+    background-color: $turqueza;
+    border-radius: 2rem;
+    padding: 1.5rem;
+    width: 29rem;
+}
+
 .bloque__titulo{
     color: $terciary-color;
     text-align: center;
@@ -604,6 +662,9 @@ header{
 .cargo{
     display: none;
 }
+
+
+
 
 
 
