--- a/PROYECTO/public/css/main.scss
+++ b/PROYECTO/public/css/main.scss
@@ -664,6 +664,168 @@ header{
 }
 
 
+/* AYUDA.HTML */
+.recuadroman{
+    background-color: var(--blanco);
+  
+  
+  }
+  .mant1{
+    color: #42052D;
+    font-style: oblique;
+    font-size: 3rem;
+    margin-left: 90px;
+    margin-top: 40px;
+  }
+  .mant2{
+    color: #42052D;
+  
+    font-style: oblique;
+    font-size: 2rem;
+    margin-left: 90px;
+    margin-top: 40px;
+    margin-bottom: 10px;
+  
+  }
+  .pieimg{
+    font-size: 0.5rem;
+    text-align: left;
+    margin: auto 190px;
+  }
+  .texttit{
+    text-align: left;
+    margin-left: 50px;
+    margin-bottom: 5px;
+  }
+  .textom{
+    text-align: left;
+  }
+  .textom_titulo{
+    text-align: left;
+    margin-left: 90px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+  .listman{
+    text-align: left;
+    margin-left: 80px;
+  }
+  .listman2{
+    text-align: left;
+    margin-left: 140px;
+  }
+  .listman3{
+    text-align: left;
+    margin-left: 200px;
+  }
+  .listman4{
+    text-align: left;
+    margin-left: 260px;
+  }
+    /* Tabla de requisitos del manual */
+  
+    /* Imagenes del manual */
+    .imagenM21 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/2-1.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM22 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/2-2.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM23 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/2-3.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM24 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/2-4.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM25 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/2-5.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM31 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/3-1.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM32 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/3-2.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM33 {
+      width: 830px;
+      height: 100px;
+      background-image: url("../../img/manual/3-3.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM41 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/4-1.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM42 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/4-2.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM43 {
+      width: 830px;
+      height: 100px;
+      background-image: url("../../img/manual/4-3.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM51 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/5-1.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM52 {
+      width: 830px;
+      height: 400px;
+      background-image: url("../../img/manual/5-2.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+    .imagenM53 {
+      width: 830px;
+      height: 100px;
+      background-image: url("../../img/manual/5-3.png");
+      background-size: 100% 120%;
+      margin: auto 250px;
+    }
+  
+
+
 
 
 
