--- a/PROYECTO/public/css/main.css
+++ b/PROYECTO/public/css/main.css
@@ -99,6 +99,35 @@
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
 }
 
+.btn-cta__cuarto {
+  width: 230px;
+  height: 60px;
+  align-items: center;
+  background-color: #00304E;
+  color: white;
+  border-radius: 50px;
+  padding: 20px 30px;
+  margin: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-weight: bolder;
+}
+.btn-cta__cuarto:hover {
+  background-color: #55B4B0;
+  color: white;
+  border-radius: 50px;
+  padding: 20px 30px;
+  margin: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-weight: bolder;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.6);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -146,6 +175,15 @@ h4 {
   text-align: center;
 }
 
+.container__busqueda {
+  background-color: white;
+  margin: 25px auto;
+  width: 1100px;
+  height: auto;
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+}
+
 .container {
   background-color: white;
   margin: 40px auto;
@@ -155,6 +193,30 @@ h4 {
   border-radius: 30px;
   background-image: url("../../img/FONDO.png");
   background-size: 100% 100%;
+}
+
+.contenedor__busquedas {
+  background-color: white;
+  margin: 25px auto;
+  width: 1100px;
+  height: auto;
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  background-color: #55B4B0;
+}
+
+.contenedor__respuesta {
+  background-color: white;
+  border-radius: 30px;
+  padding: 10px;
+}
+
+.contenedor__bus {
+  background-color: white;
+  border-radius: 30px;
+  width: 1100px;
+  height: auto;
+  margin: 25px auto;
 }
 
 .container__segundo {
@@ -236,7 +298,7 @@ h4 {
   background-color: white;
   margin: 10px auto;
   width: 1100px;
-  height: 600px;
+  height: 250px;
   box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
   background-image: url("../../img/BUSQUEDA.png");
   background-size: 100.2% 100%;
@@ -380,6 +442,10 @@ header nav {
 
 .izquierda {
   justify-content: right;
+}
+
+.derecha {
+  margin: 0px 42rem;
 }
 
 .centro {
@@ -593,9 +659,13 @@ header nav {
   flex-direction: row;
 }
 
+.busquedas__contenido {
+  padding: 20px;
+}
+
 /* BUSQUEDA */
 .titulo__busqueda {
-  padding: 80px 80px 30px 80px;
+  padding: 40px 80px 30px 80px;
   text-align: center;
 }
 
@@ -612,7 +682,7 @@ header nav {
      -moz-appearance: none;
           appearance: none;
   padding: 0 30px 0 15px;
-  width: 50%;
+  width: 220px;
   color: var(--blanco);
   background-color: #AD2448;
 }
@@ -635,7 +705,7 @@ header nav {
   justify-content: center;
   position: relative;
   min-width: 250px;
-  height: 50px;
+  height: 60px;
 }
 
 .menuFiltros__busqueda {
@@ -691,15 +761,18 @@ input {
 
 .busquedas {
   justify-content: center;
-  margin: 0px 40px;
+  margin: 10px 30px;
+}
+
+.texto .busquedas {
+  text-align: center;
 }
 
 .contenedor__busquedas {
-  width: 60rem;
-  height: 15rem;
+  width: auto;
+  height: auto;
   border-radius: 20px;
   border: 1px solid #00304E;
-  background-color: #94719F;
   margin: 20px 20px;
 }
 
