--- a/PROYECTO/public/css/main.css
+++ b/PROYECTO/public/css/main.css
@@ -1040,3 +1040,67 @@ input {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
 }
+
+.cargo {
+  display: none;
+}
+
+.container__usuarios {
+  margin-top: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+  font-size: 20px;
+}
+
+tr {
+  font-size: 10px;
+}
+
+.botonestado {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.cargo {
+  display: none;
+}
+
+.container__usuarios {
+  margin-top: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+  font-size: 20px;
+}
+
+tr {
+  font-size: 10px;
+}
+
+.botonestado {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
