--- a/PROYECTO/public/css/main.scss
+++ b/PROYECTO/public/css/main.scss
@@ -183,6 +183,15 @@ h4{
     margin: 25px auto;
 }
 
+
+.contenedor__solitudes{
+    background-color: $terciary-color;
+    border-radius: 30px;
+    width: 1200px;
+    height: auto;
+    margin: 25px auto;
+}
+
 .container__segundo{
     background-color: white;
     margin: 40px auto;
