--- a/PROYECTO/public/css/main.css
+++ b/PROYECTO/public/css/main.css
@@ -219,6 +219,14 @@ h4 {
   margin: 25px auto;
 }
 
+.contenedor__solitudes {
+  background-color: white;
+  border-radius: 30px;
+  width: 1200px;
+  height: auto;
+  margin: 25px auto;
+}
+
 .container__segundo {
   background-color: white;
   margin: 40px auto;
